z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,9 +11,8 @@
   display: flex;
   align-items: center;
   position: relative;
-  z-index: -1;
-  overflow: hidden;
   top: 0;
+  overflow: hidden;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -21,6 +20,7 @@
 }
 
 .header__title {
+  z-index: 2;
   margin: 0;
   margin-left: 64px;
   width: 730px;
@@ -31,6 +31,7 @@
 
 .header__subtitle {
   position: absolute;
+  z-index: 2;
   bottom: 30px;
   left: 64px;
   margin: 0;
@@ -46,7 +47,7 @@
 
 .header__main-illustration {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   bottom: 0;
   right: 0;
   max-width: 765px;
@@ -54,7 +55,6 @@
 
 .header__square-pic {
   position: absolute;
-  z-index: -2;
   right: 0;
   top: 64px;
   height: 568px;
